[package]
name = "sdl_game"
version = "0.1.0"
authors = ["Yeonho Jang <siabard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.sdl2]
version = "0.32.1"
default-features = false
features = ["image"]